k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
spec:
  ports:
    - port: 5432
  selector:
    app: auth-db-pod

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db-statefulset
spec:
  serviceName: auth-db-service
  replicas: 1
  selector:
    matchLabels:
      app: auth-db-pod
  template:
    metadata:
      labels:
        app: auth-db-pod
    spec:
      containers:
        - name: auth-db-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-db-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: auth-db-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-pod
  template:
    metadata:
      labels:
        app: auth-service-pod
    spec:
      containers:
        - name: auth-service-container
          image: ghcr.io/zvnico/cloud-integration/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-service
spec:
  selector:
    app: auth-service-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 50051
