k8s/note-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-db-service
spec:
  ports:
    - port: 5432
  selector:
    app: note-db-pod

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: note-db-statefulset
spec:
  serviceName: note-db-service
  replicas: 1
  selector:
    matchLabels:
      app: note-db-pod
  template:
    metadata:
      labels:
        app: note-db-pod
    spec:
      containers:
        - name: note-db-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: note-db-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: note-db-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note-app-pod
  template:
    metadata:
      labels:
        app: note-app-pod
    spec:
      containers:
        - name: note-app-container
          image: ghcr.io/zvnico/cloud-integration/note-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: note-app-service
spec:
  selector:
    app: note-app-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-app-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: note-app-service
                port:
                  number: 80
